# one_time_secrets

./: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
secret/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
secret/migrations/: 0001_initial.py  0002_secret_secret_key_alter_secret_name_and_more.py  0003_secret_is_active.py  0004_log.py
